src/test/rustdoc-ui/test-ice.rs
// compile-flags:--test -Z unstable-options -Z treat-err-as-bug
// failure-status: 101

fail
